# fin-llm

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  [LLM]_01_OpenAI_API.ipynb  [LLM]_02_LangChain_Basic.ipynb  [LLM]_03_Gradio_Chatbot.ipynb  [LLM]_04_Summarization_LCEL.ipynb  [LLM]_05_Langfuse_Pompt_Management.ipynb  [LLM]_06_Prompt_Engineering_Fewshot.ipynb  [LLM]_07_RAG.ipynb  [LLM]_08_RAG_Evalution.ipynb  [LLM]_09_Query_Expansion.ipynb  [LLM]_10_Rerank_Compression.ipynb  [LLM]_11_LangChain_Tools.ipynb  [LLM]_12_Finetuning_Dataset.ipynb  [LLM]_13_finetuning_colab.ipynb  [PROJECT]_Legal_QA_RAG.ipynb  clear_notebook_outputs.py  main.py  pyproject.toml
data/: etf_database.db  etf_info.csv  ragas_testset.csv  testset_10.xlsx
